--- a/org.dieschnittstelle.jee.esa.ejbs/.settings/org.eclipse.wst.common.component
+++ b/org.dieschnittstelle.jee.esa.ejbs/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="org.dieschnittstelle.jee.esa.ejbs">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
         <dependent-module archiveName="org.dieschnittstelle.jee.esa.shared.ejbmodule.crm.jar" deploy-path="/" handle="module:/resource/org.dieschnittstelle.jee.esa.shared.ejbmodule.crm/org.dieschnittstelle.jee.esa.shared.ejbmodule.crm">
